<resources>
    <string name="app_name">WeMeet</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logout_str">Logout</string>

    <!-- Login Activiy -->
    <string name="title_activity_Login">WeMeet</string>
    <string name="register_text">Register</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log in</string>

    <string name="error_invalid_credentials">Invalid credentials</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Register Activity -->
    <string name="title_activity_register">Register</string>
    <string name="reg_username_hint_text">Username (min 6 characters)</string>
    <string name="reg_password_hint_text">Password (min 6 characters)</string>
    <string name="reg_phone_number_hint">234 432 5648</string>
    <string name="reg_email_hint">john@gmail.com</string>
    <string name="title_activity_user_home_screen">Your Meetings</string>


    <!--Create Meeting Activity-->
    <string name="title_activity_create_meeting">CreateMeetingActivity</string>
    <string name="prompt_max_ppl">Number of people in the group</string>
    <string name="prompt_time">Meeting time</string>
    <string name="prompt_date">Meeting date</string>
    <string name="create_meeting_text">Create Meeting</string>
    <string name="select_loc_text">Select location</string>
    <string name="title_activity_meeting_details">Meeting Details</string>


</resources>
