<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context="com.cse5306.wemeet.activities.CreateMeetingActivity">

    <include
        android:id="@+id/create_meeting_toolbar"
        layout="@layout/actionbar" />

    <ProgressBar
        android:id="@+id/create_meet_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/create_meet_error_lin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_light"
        android:visibility="gone">
        <TextView
            android:id="@+id/create_meet_screen_error_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/create_meeting_form"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

           <LinearLayout
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <TextView
                   android:layout_width="wrap_content"
                   android:gravity="center"
                   android:layout_height="fill_parent"
                   android:text="Max Number of people: "/>

               <NumberPicker
                   android:id="@+id/create_meet_max_ppl"
                   android:gravity="center"
                   android:layout_width="wrap_content"
                   android:layout_height="fill_parent"
                  >

               </NumberPicker>

           </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/create_meet_date"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/prompt_date"
                    android:inputType="date"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    />

                <ImageButton
                    android:id="@+id/create_meet_date_picker_btn"
                    android:layout_width="0dp"
                    android:scaleType="centerInside"

                    android:src="@drawable/ic_date_picker"
                    android:layout_weight="1"
                    android:layout_height="fill_parent" />
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/create_meet_time"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/prompt_time"
                    android:inputType="time"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    />

                <ImageButton
                    android:id="@+id/create_meet_time_picker_btn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_time_picker"
                    android:layout_height="fill_parent" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Choose at-least one:"/>

                <GridLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:columnCount="2"
                    android:rowCount="3"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/check_restaurant"
                        android:layout_width="wrap_content"
                        android:onClick="onCheckChangeListen"
                        android:text="Restaurant"
                        />
                    <CheckBox
                        android:id="@+id/check_bar"
                        android:layout_width="wrap_content"
                        android:onClick="onCheckChangeListen"
                        android:text="Bar"
                        />
                    <CheckBox
                        android:id="@+id/check_shopping_mall"
                        android:layout_width="wrap_content"
                        android:onClick="onCheckChangeListen"
                        android:text="Shopping mall"
                        />
                    <CheckBox
                        android:id="@+id/check_library"
                        android:layout_width="wrap_content"
                        android:onClick="onCheckChangeListen"
                        android:text="Library"
                        />
                    <CheckBox
                        android:id="@+id/check_cafe"
                        android:layout_width="wrap_content"
                        android:onClick="onCheckChangeListen"
                        android:text="Cafe"
                        />
                </GridLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_loc_text"/>
                <RadioGroup
                    android:id="@+id/create_meet_radio_grp"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:checked="true"
                        android:id="@+id/create_meet_radio_home_loc"
                        android:text="Home Location"
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:id="@+id/create_meet_radio_curr_loc"
                        android:text="Current Locaiton"
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </RadioGroup>
               <TextView
                   android:layout_marginTop="8dp"
                   android:id="@+id/create_meet_location_set"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content" />

            </LinearLayout>

            <Button
                android:id="@+id/create_meet_btn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/create_meeting_text"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>